page template updateed

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: ce.pdn.ac.lk
+title: "cepdnaclk.github.io"
 # logo: /assets/img/logo.png
-description: Minimal is a theme for GitHub Pages.
+description: "Department of Computer Engineering"
 # show_downloads: true
 # google_analytics:
 theme: jekyll-theme-minimal
