--- a/.github/workflows/sitemap-update.yml
+++ b/.github/workflows/sitemap-update.yml
@@ -19,9 +19,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@v2
         with:
-          ref: main
+          ref: master
 
       - name: Set up Python 3.6
         uses: actions/setup-python@v2
