--- a/.github/workflows/sitemap-update.yml
+++ b/.github/workflows/sitemap-update.yml
@@ -21,7 +21,7 @@ jobs:
       - name: checkout
         uses: actions/checkout@master
         with:
-          ref: main
+          ref: master
 
       - name: Set up Python 3.6
         uses: actions/setup-python@v2
@@ -39,7 +39,7 @@ jobs:
           cd scripts
           python github_pages.py
 
-      - name: Commit and push into the main branch
+      - name: Commit and push into the master branch
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
