--- a/.github/workflows/sitemap-update.yml
+++ b/.github/workflows/sitemap-update.yml
@@ -47,5 +47,5 @@ jobs:
           git config user.name github-actions
           git config user.email github-actions@github.com
           git add --all
-          git commit -m "Site build using GitHub Actions"
+          git commit -m "Site build using GitHub Actions" || echo "No changes on Projects and Publications"
           git push
